--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 Thumbs.db
 UserInterfaceState.xcuserstate
 $RECYCLE.BIN/
+.firebaserc
 
 *.log
 log.txt
@@ -29,3 +30,8 @@ npm-debug.log*
 /platforms
 /plugins
 /www
+/android
+.github
+.firebase
+src/environments/environment.prod.ts
+src/environments/environment.ts
