--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@angular/service-worker": "~11.2.0",
+    "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
-    "firebase": "^8.3.1",
+    "@ionic/storage-angular": "^3.0.6",
+    "firebase": "^8.3.3",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
